--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "server": "json-server --watch --port 5000 ./_data/db.json",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "server": "json-server --watch --port 5000 ./_data/db.json"
+    "lint": "next lint"
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
-    "eslint": "8.55.0",
-    "eslint-config-next": "14.0.4",
     "next": "14.0.4",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.4"
   }
 }
