--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": [
     "next",
     "next/core-web-vitals",
-    "plugin:@next/next/recommended"
+    "plugin:@next/next/recommended",
+    "next/babel"
     ]
 }
